# wordle-tester

./: Cargo.toml  README.md
src/: main.rs
