[package]
name = "wordle-tester"
version = "0.3.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rand = "0.8.4"
futures = "0.3.19"

[dependencies.clap]
version = "3.0.13"
features = ["derive"]

[dependencies.tokio]
version = "1.16.1"
features = ["full"]
